src/kv_store/kv_store/k8s/istio/kvstore-istio-destinationrule-2.0.yaml
# kvstore-app-destinationrule-2.0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kvstore-app
spec:
  host: kvstore-app.kvstore.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1-0
    labels:
      app: kvstore-app
      version: "1.0"
  - name: v2-0
    labels:
      app: kvstore-app
      version: "2.0"
